--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,9 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.554.0",
+    "mammoth": "^1.11.0",
     "next": "16.0.3",
+    "pdfjs-dist": "^5.4.394",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
@@ -39,10 +41,10 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
-    "autoprefixer": "^10.4.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^3.4.13",
